feat: 크루 조회 메서드 접근 제어자 `public`으로 수정
크루 추천 메서드에서 사용하기 위함